force-app/main/default/objects/Account/fields/A_o_de_Fundaci_n__c.field-meta.xml
<CustomField>
    <fullName>A_o_de_Fundaci_n__c</fullName>
    <description>Año de fundación de la cuenta</description>
    <inlineHelpText>Año de fundación de la cuenta</inlineHelpText>
    <label>Año de Fundación</label>
    <type>Date</type>
</CustomField>