force-app/main/default/objects/Account/fields/A_os_Instituci_n__c.field-meta.xml
<CustomField>
    <fullName>A_os_Instituci_n__c</fullName>
    <description>Años que tiene la institución en el mercado</description>
    <inlineHelpText>Años que tiene la institución en el mercado</inlineHelpText>
    <label>Años Institución</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>