force-app/main/default/objects/Account/fields/Activos_en_US__c.field-meta.xml
<CustomField>
    <fullName>Activos_en_US__c</fullName>
    <description>Activos del cliente / Prospect</description>
    <label>Assets US$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>