force-app/main/default/objects/Account/fields/calificaci_n_cuenta__c.field-meta.xml
<CustomField>
    <fullName>calificaci_n_cuenta__c</fullName>
    <description>calificación de la potencialidad del proyecto en general</description>
    <label>calificación_cuenta</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>