force-app/main/default/objects/Account/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Ciudad Cuenta</description>
    <inlineHelpText>Ciudad Cuenta</inlineHelpText>
    <label>Ciudad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>