force-app/main/default/objects/Account/fields/Comportamiento_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Comportamiento_Cliente__c</fullName>
    <description>Comportamiento Cliente</description>
    <inlineHelpText>Comportamiento Cliente</inlineHelpText>
    <label>Comportamiento Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Innovador / Innovator</fullName>
            </value>
            <value>
                <fullName>Conservador / Conservative</fullName>
            </value>
            <value>
                <fullName>Arriesgado / Risk Taking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>