force-app/main/default/objects/Account/fields/FS_ColaAtencion__c.field-meta.xml
<CustomField>
    <fullName>FS_ColaAtencion__c</fullName>
    <label>Cola de Atención</label>
    <length>255</length>
    <type>Text</type>
</CustomField>