force-app/main/default/objects/Account/fields/FS_ServicioRemoto__c.field-meta.xml
<CustomField>
    <fullName>FS_ServicioRemoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicio Remoto</label>
    <type>Checkbox</type>
</CustomField>