force-app/main/default/objects/Account/fields/Fuente_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Fuente_de_Cuenta__c</fullName>
    <label>Fuente de Cuenta</label>
    <type>TextArea</type>
</CustomField>