force-app/main/default/objects/Account/fields/N_de_Empleados__c.field-meta.xml
<CustomField>
    <fullName>N_de_Empleados__c</fullName>
    <label>Nº de Empleados</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-200</fullName>
            </value>
            <value>
                <fullName>200-400</fullName>
            </value>
            <value>
                <fullName>400-1000</fullName>
            </value>
            <value>
                <fullName>+1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>