force-app/main/default/objects/Account/fields/Name_of_BPM_or_workflow_system__c.field-meta.xml
<CustomField>
    <fullName>Name_of_BPM_or_workflow_system__c</fullName>
    <description>Enter the name of the BPM or workflow system in this field, if the account has an existing BPM or workflow system. If no BPM or workflow system exists, enter &gt;None&lt;!</description>
    <inlineHelpText>Enter the name of the BPM or workflow system in this field, if the account has an existing BPM or workflow system. If no BPM or workflow system exists, enter &gt;None&lt;!</inlineHelpText>
    <label>Name of BPM or workflow system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>