force-app/main/default/objects/Account/fields/No_de_Clientes__c.field-meta.xml
<CustomField>
    <fullName>No_de_Clientes__c</fullName>
    <label>No. de Clientes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>