force-app/main/default/objects/Account/fields/No_Oficinas__c.field-meta.xml
<CustomField>
    <fullName>No_Oficinas__c</fullName>
    <label>No. Oficinas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>