force-app/main/default/objects/Account/fields/Numero_Celular__c.field-meta.xml
<CustomField>
    <fullName>Numero_Celular__c</fullName>
    <inlineHelpText>minimo 8 digitos</inlineHelpText>
    <label>Numero Celular</label>
    <type>Phone</type>
</CustomField>