force-app/main/default/objects/Account/fields/Qu_DW_BI_tiene_actualmente__c.field-meta.xml
<CustomField>
    <fullName>Qu_DW_BI_tiene_actualmente__c</fullName>
    <label>Solución CDW / BI actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>