force-app/main/default/objects/Account/fields/Qu_FIducia_Fondos_tiene_actualmente__c.field-meta.xml
<CustomField>
    <fullName>Qu_FIducia_Fondos_tiene_actualmente__c</fullName>
    <label>Solución FIducia-Fondos actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>