force-app/main/default/objects/Account/fields/Soluci_n_ANTIFRAUDE_actual__c.field-meta.xml
<CustomField>
    <fullName>Soluci_n_ANTIFRAUDE_actual__c</fullName>
    <label>Solución Riesgos actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>