force-app/main/default/objects/Account/fields/Soluci_n_CORE_actual_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Soluci_n_CORE_actual_Oportunidad__c</fullName>
    <description>Identificar la solución de CORE</description>
    <inlineHelpText>Enter the name of the existing core banking system. Enter &quot;None&quot; in case the bank does not share the information.</inlineHelpText>
    <label>Solución CORE actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>