force-app/main/default/objects/Account/fields/Soluci_n_Prevenci_n_Fraudes_actual__c.field-meta.xml
<CustomField>
    <fullName>Soluci_n_Prevenci_n_Fraudes_actual__c</fullName>
    <label>Solución Prev.Fraude / Lavado Din actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>