force-app/main/default/objects/Account/validationRules/FS_ValidarCampoCarterizacion.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidarCampoCarterizacion</fullName>
    <active>true</active>
    <description>El perfil PM-PS no puede modificar el campo: Carterización.</description>
    <errorConditionFormula>AND(
					$Profile.Name == &apos;PM-PS&apos;,
     ISCHANGED(FS_Carterizacion__c)
)</errorConditionFormula>
    <errorDisplayField>FS_Carterizacion__c</errorDisplayField>
    <errorMessage>Privilegios insuficiente para modificar el campo Carterización.</errorMessage>
</ValidationRule>