force-app/main/default/objects/Account/listViews/Clientes.listView-meta.xml
<ListView>
    <fullName>Clientes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Producto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Cliente</value>
    </filters>
    <label>Clientes</label>
</ListView>