force-app/main/default/objects/Account/listViews/Nuevoestasemana.listView-meta.xml
<ListView>
    <fullName>Nuevoestasemana</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Nuevo esta semana</label>
</ListView>