force-app/main/default/objects/Account/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>Pa_s__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Ciudad__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>